--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<packaging>pom</packaging>
 	<name>bmkeg-parent</name>
 
-	<!-- <parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
+	<!-- <parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId>
 		<version>0.5.0.BUILD-SNAPSHOT</version> </parent> -->
 
 	<properties>
@@ -15,7 +15,7 @@
 		<spring.security.version>3.2.0.RC2</spring.security.version>
 		<tiles.version>3.0.1</tiles.version>
 
-		<!-- Note that setting the slf4j version higher than 1.5.5 leads to IllegalAccessError 
+		<!-- Note that setting the slf4j version higher than 1.5.5 leads to IllegalAccessError
 			exceptions -->
 		<slf4j.version>1.7.5</slf4j.version>
 		<trove.version>3.0.3</trove.version>
@@ -85,15 +85,15 @@
 
 	<repositories>
 
-		<!-- There are two versions of Spring artifacts that are hosted in two 
-			different places: the Enterprise Bundle Repository (EBR) maintained by SpringSource 
-			and Maven Central. The Spring artifacts in one repository are different from 
-			the other, they follow a different naming scheme (group name is appended 
-			to artifact name) and shouldn't be mixed with the artifacts from the other 
-			repository. The artifacts in EBR are OSGi compatible and undergo extensive 
-			QA performed by the Spring team. If using the Spring artifacts from EBR then 
-			all dependencies like Hibernate and slf4j should also be obtained from EBR. 
-			EBR artifacts can be searched at: http://www.springsource.com/repository. 
+		<!-- There are two versions of Spring artifacts that are hosted in two
+			different places: the Enterprise Bundle Repository (EBR) maintained by SpringSource
+			and Maven Central. The Spring artifacts in one repository are different from
+			the other, they follow a different naming scheme (group name is appended
+			to artifact name) and shouldn't be mixed with the artifacts from the other
+			repository. The artifacts in EBR are OSGi compatible and undergo extensive
+			QA performed by the Spring team. If using the Spring artifacts from EBR then
+			all dependencies like Hibernate and slf4j should also be obtained from EBR.
+			EBR artifacts can be searched at: http://www.springsource.com/repository.
 			Maven Central Artifacts can be searched at: http://search.maven.org. -->
 
 		<repository>
@@ -119,10 +119,10 @@
 
 		<!-- BigData Repository -->
 
-		<repository>
+		<!-- <repository>
 			<id>bigdata.releases</id>
 			<url>http://www.systap.com/maven/releases</url>
-		</repository>
+		</repository> -->
 
 		<!-- JBoss Repository -->
 
@@ -148,7 +148,7 @@
 			<url>http://openprovenance.org/java/maven-releases/</url>
 		</repository>
 
-		<!-- BMKEG local repository at ettin.isi.edu 
+		<!-- BMKEG local repository at ettin.isi.edu
 
 		<repository>
 			<id>ettin-snapshots</id>
@@ -173,19 +173,19 @@
 			<id>isi.nexus.server.thirdparty</id>
 			<name>ISI Third Party Nexus Repository</name>
 			<url>http://colo-pm2.isi.edu:8081/nexus/content/repositories/thirdparty/</url>
-		</repository>	
+		</repository>
 
 		<repository>
 			<id>isi.nexus.server.snapshots</id>
 			<name>ISI Snapshots Nexus Repository</name>
 			<url>http://colo-pm2.isi.edu:8081/nexus/content/repositories/snapshots/</url>
-		</repository>	
+		</repository>
 
 		<repository>
 			<id>isi.nexus.server</id>
 			<name>ISI Snapshots Nexus Repository</name>
 			<url>http://colo-pm2.isi.edu:8081/nexus/content/repositories/public/</url>
-		</repository>	
+		</repository>
 
 		<repository>
 			<id>maven-central</id>
@@ -193,8 +193,8 @@
 			<url>http://central.maven.org/maven2/</url>
 		</repository>
 
-		<!-- Hack to fix the BlazeDS versioning problem <repository> <id>SpringFlex</id> 
-			<name>SpringFlex Source Repo</name> <url>https://src.springsource.org/svn/spring-flex/tags/spring-flex-1.5.0.RELEASE/local-repo/</url> 
+		<!-- Hack to fix the BlazeDS versioning problem <repository> <id>SpringFlex</id>
+			<name>SpringFlex Source Repo</name> <url>https://src.springsource.org/svn/spring-flex/tags/spring-flex-1.5.0.RELEASE/local-repo/</url>
 			</repository> -->
 
 		<repository>
@@ -219,9 +219,9 @@
 			<url>http://oss.sonatype.org/content/repositories/snapshots/</url>
 		</pluginRepository>
 
-		<!-- <pluginRepository> <id>flexpmd.opensource.adobe</id> <releases> <enabled>true</enabled> 
-			</releases> <snapshots> <enabled>false</enabled> </snapshots> <name>FlexPMD 
-			repository on opensource.adobe.com</name> <url>http://opensource.adobe.com/svn/opensource/flexpmd/maven-repository/release/</url> 
+		<!-- <pluginRepository> <id>flexpmd.opensource.adobe</id> <releases> <enabled>true</enabled>
+			</releases> <snapshots> <enabled>false</enabled> </snapshots> <name>FlexPMD
+			repository on opensource.adobe.com</name> <url>http://opensource.adobe.com/svn/opensource/flexpmd/maven-repository/release/</url>
 			</pluginRepository> -->
 
 		<pluginRepository>
@@ -757,12 +757,12 @@
 				<version>1.4.0</version>
 			</dependency>
 
-			<!-- Cleartk dependency management. This are taken from the cleartk-release 
-				artifact. The cleartk documentation asks that cleartk-release dependency 
-				management be imported into the project poms by adding cleartk-release as 
-				a dependency with scope: import and omitting version information for all 
-				other cleartk dependencies added to the pom. Unfortunately, eclipse doesn't 
-				handle the import of dependency management so we copied them into our parent 
+			<!-- Cleartk dependency management. This are taken from the cleartk-release
+				artifact. The cleartk documentation asks that cleartk-release dependency
+				management be imported into the project poms by adding cleartk-release as
+				a dependency with scope: import and omitting version information for all
+				other cleartk dependencies added to the pom. Unfortunately, eclipse doesn't
+				handle the import of dependency management so we copied them into our parent
 				pom. -->
 			<dependency>
 				<groupId>org.cleartk</groupId>
